syn-state-machine/src/impls/snapshots/syn_state_machine__impls__interlace__tests__it_matches_comma_seperation.snap
---
source: syn-state-machine/src/impls/interlace.rs
expression: "crate::parse::<Interlace<Ident,\n        FPunct<','>>>(::quote::quote! { hello, world, hi, there, })"
---
Ok(
    (
        Interlace(
            [
                Ident(
                    hello,
                ),
                Ident(
                    world,
                ),
                Ident(
                    hi,
                ),
                Ident(
                    there,
                ),
            ],
            [
                FPunct,
                FPunct,
                FPunct,
            ],
        ),
        1,
    ),
)
