syn-state-machine/src/impls/snapshots/syn_state_machine__impls__interlace__tests__it_matches_empty.snap
---
source: syn-state-machine/src/impls/interlace.rs
expression: "crate::parse::<Interlace<Ident, FPunct<','>>>(::quote::quote! {})"
---
Ok(
    (
        Interlace(
            [],
            [],
        ),
        0,
    ),
)
