syn-state-machine/src/impls/snapshots/syn_state_machine__impls__interlace__tests__it_matches_tokens_after_interlace.snap
---
source: syn-state-machine/src/impls/interlace.rs
expression: "crate::parse::<(Interlace<Ident, (FJointPunct<':'>, FPunct<':'>)>,\n        (FPunct<'>'>, FPunct<';'>))>(::quote::quote! { hello > ; })"
---
Ok(
    (
        (
            Interlace(
                [
                    Ident(
                        hello,
                    ),
                ],
                [],
            ),
            (
                FPunct,
                FPunct,
            ),
        ),
        0,
    ),
)
