syn-state-machine/src/impls/snapshots/syn_state_machine__impls__interlace__tests__it_matches_trailing_with.snap
---
source: syn-state-machine/src/impls/interlace.rs
expression: "crate::parse::<InterlaceTrail<Ident,\n        FPunct<','>>>(::quote::quote! { hi, hello, })"
---
Ok(
    (
        InterlaceTrail(
            [
                Ident(
                    hi,
                ),
                Ident(
                    hello,
                ),
            ],
            [
                FPunct,
                FPunct,
            ],
        ),
        0,
    ),
)
