syn-state-machine/src/impls/snapshots/syn_state_machine__impls__interlace__tests__it_matches_with_arbitrarilly.snap
---
source: syn-state-machine/src/impls/interlace.rs
expression: "crate::parse::<Interlace<(Ident, Vec<Ident>),\n        Vec<FPunct<','>>>>(::quote::quote! { hello hi world,,, hi, there })"
---
Ok(
    (
        Interlace(
            [
                (
                    Ident(
                        hello,
                    ),
                    [
                        Ident(
                            hi,
                        ),
                        Ident(
                            world,
                        ),
                    ],
                ),
                (
                    Ident(
                        hi,
                    ),
                    [],
                ),
                (
                    Ident(
                        there,
                    ),
                    [],
                ),
            ],
            [
                [
                    FPunct,
                    FPunct,
                    FPunct,
                ],
                [
                    FPunct,
                ],
            ],
        ),
        0,
    ),
)
