syn-state-machine/src/impls/snapshots/syn_state_machine__impls__interlace__tests__it_matches_with_arbitrarilly_sized_interlacing.snap
---
source: syn-state-machine/src/impls/interlace.rs
expression: "crate::parse::<Interlace<(Ident, Option<Ident>),\n        Vec<FPunct<','>>>>(::quote::quote! {\n            hello hi world,,, hi, there hello, world, hi, there\n        })"
---
Ok(
    (
        Interlace(
            [
                (
                    Ident(
                        hello,
                    ),
                    Some(
                        Ident(
                            hi,
                        ),
                    ),
                ),
                (
                    Ident(
                        world,
                    ),
                    None,
                ),
                (
                    Ident(
                        hi,
                    ),
                    None,
                ),
                (
                    Ident(
                        there,
                    ),
                    Some(
                        Ident(
                            hello,
                        ),
                    ),
                ),
                (
                    Ident(
                        world,
                    ),
                    None,
                ),
                (
                    Ident(
                        hi,
                    ),
                    None,
                ),
                (
                    Ident(
                        there,
                    ),
                    None,
                ),
            ],
            [
                [],
                [
                    FPunct,
                    FPunct,
                    FPunct,
                ],
                [
                    FPunct,
                ],
                [
                    FPunct,
                ],
                [
                    FPunct,
                ],
                [
                    FPunct,
                ],
            ],
        ),
        0,
    ),
)
